@@ -1,4 +1,6 @@
 1.9.1
+* Client/WebUI: The font is set to Arial
+* Client/WebUI/Network: Show how long each connection has been active and removes lest sent/rcvd command
 * Client: Write new blocks and UTXO set to disk 2 seconds after the last successfull AcceptBlock()
 * Client/WebUI/Blocks: The block's fee chart appears as a popup now
 * Client/WebUI: Pressing ESC closes popups
